Fix form course type field alignment

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,7 +12,6 @@
 }
 
 .container {
-  padding-top: 100px;
   padding-right: 30px;
   padding-left: 30px;
 }
